--- a/no_framework/bulma.html
+++ b/no_framework/bulma.html
@@ -27,7 +27,7 @@
             <span aria-hidden="true"></span>
           </a>
         </div>
-      
+      <p>changeDELETELATER</p>
         <div id="navbarBasicExample" class="navbar-menu">
           <div class="navbar-item has-dropdown">
             <a class="navbar-item has-text-white" href="https://bulma.io/">
