added a delete <p> to see if working

--- a/no_framework/index.html
+++ b/no_framework/index.html
@@ -76,6 +76,19 @@
       </nav>
     <h1> THis is my example</h1>
     <p>This is my example</p>
-    
+    <script src="https://unpkg.com/vue@3/dist/vue.global.js"></script>
+    <script>
+         const { createApp, ref } = Vue
+
+createApp({
+  setup() {
+    const message = ref('Hello vue!')
+    return {
+      message
+    }
+  }
+}).mount('#app')
+
+    </script> 
 </body>
 </html>
