see if it works

--- a/no_framework/bulma.html
+++ b/no_framework/bulma.html
@@ -9,6 +9,8 @@
     <style>@import "https://cdn.jsdelivr.net/npm/bulma@1.0.2/css/bulma.min.css";</style>
 </head>
 
+<p>delete</p>
+
 <body>  
     <nav class="navbar is-primary" role="navigation" aria-label="main navigation">
         <div class="navbar-brand">
@@ -27,7 +29,7 @@
             <span aria-hidden="true"></span>
           </a>
         </div>
-      <p>changeDELETELATER</p>
+      
         <div id="navbarBasicExample" class="navbar-menu">
           <div class="navbar-item has-dropdown">
             <a class="navbar-item has-text-white" href="https://bulma.io/">
