--- a/Client/index.html
+++ b/Client/index.html
@@ -1,13 +1,9 @@
-<!doctype html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <link rel="icon" href="/favicon.ico" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite App</title>
-  </head>
-  <body>
-    <div id="app"></div>
-    <script type="module" src="/src/main.ts"></script>
-  </body>
-</html>
+<script setup lang="ts"></script>
+
+<template>
+  <div>
+    <h1 class="HomePage">this is a homepage</h1>
+  </div>
+</template>
+
+<style scoped></style>
