--- a/Client/index.html
+++ b/Client/index.html
@@ -11,4 +11,5 @@
     <script type="module" src="/src/main.ts"></script>
   </body>
 </html>
-<delete></delete>
+
+<p>is my computer pushing to github</p>
